@@ -1,6 +1,6 @@
 /*
  *  Mathlib : A C Library of Special Functions
- *  Copyright (C) 1998-2001 Ross Ihaka and the R Development Core Team
+ *  Copyright (C) 1998-2004 Ross Ihaka and the R Development Core Team
  *
  *  This program is free software; you can redistribute it and/or modify
  *  it under the terms of the GNU General Public License as published by
@@ -177,5 +177,15 @@ double R_pow_di(double x, int n)
 
 double NA_REAL = ML_NAN;
 double R_PosInf = ML_POSINF, R_NegInf = ML_NEGINF;
+
+#include <stdio.h>
+#include <stdarg.h>
+void REprintf(char *format, ...)
+{
+    va_list(ap);
+    va_start(ap, format);
+    fprintf(stderr, format, ap);
+    va_end(ap);
+}
 
 #endif /* MATHLIB_STANDALONE */
