@@ -129,6 +129,8 @@ BUG FIXES
 
     o	which.min() & which.max()'s C code now PROTECT()'s its result.
 
+    o	Building standalone nmath did not support some of the DEBUG options.
+
 
 
 		CHANGES IN R VERSION 1.9.0
